--- a/src/App.css
+++ b/src/App.css
@@ -391,7 +391,7 @@
         margin: 0;
         color: white;
         font-weight: 600;
-        font-size: 450%;
+        font-size: 4vw;
         letter-spacing: 0.05em;
         text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.3);
         position: relative;
@@ -403,7 +403,7 @@
 
     .landing-contents h2 {
         font-weight: 500;
-        font-size: 180%;
+        font-size: 2vw;
         letter-spacing: 0.12em;
         color: #fff;
         width: 70%;
@@ -411,7 +411,7 @@
     }
 
     .contact-container {
-        margin-top: 70px;
+        margin-top: 5vh;
         width: 180px;
         height: 60px;
         border-radius: 10px;
@@ -465,7 +465,7 @@
         box-sizing: border-box;
         position: absolute;
         width: 97%;
-        height: 95%;
+        height: 77vh;
         background: #1a1d2e;
         z-index: 4;
         right: 0;
@@ -474,6 +474,10 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    .for-work-header {
+        width: 50%;
     }
 
     .for-work-header h1 {
@@ -487,19 +491,21 @@
     }
 
     .for-work-description {
-        padding: 50px 80px
+        padding: 5vh 5vw;
     }
 
     .for-work-description h2 {
         font-weight: 500;
-        font-size: 1.5vw;
+        font-size: 2.5vh;
         letter-spacing: 0.1em;
-        width: 35vw;
+        width: 100%;
         color: #fff;
         margin: 0;
     }
 
     .services-container {
+        padding: 5%;
+
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -530,7 +536,7 @@
     .services-container h2 {
         width: max-content;
         font-weight: 500;
-        font-size: 100%;
+        font-size: 0.8vw;
         letter-spacing: 0.1em;
         color: #fff;
         margin: 0;
@@ -539,35 +545,43 @@
     }
 
     .take-on-work-description {
-        padding: 50px 80px;
+        padding: 5vh 5vw;
+        width: fit-content;
+        height: fit-content;
+        
 
 
     }
 
     .take-on-work-description h2 {
         font-weight: 500;
-        font-size: 30px;
+        font-size: 2.5vh;
+
         letter-spacing: 0.1em;
-        width: 950px;
+        width:50vw;
         color: #fff;
-        margin: 0;
     }
 
     .descriptions {
-        height: 320px;
+        position: relative;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        margin: 0 0 1vh 0
+
     }
 
     .lets-talk-description {
-        padding: 50px 80px;
+        padding: 5vh 5vw;
+        
     }
 
     .lets-talk-description h2 {
-        width: 950px;
+        width: 50vw;
         font-weight: 500;
-        font-size: 30px;
+        font-size: 2.5vh;
+        
         letter-spacing: 0.12em;
         color: #fff;
     }
