--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Poppins;
+    src: url('https://fonts.googleapis.com/css?family=Poppins');
+}
+
 .App {
     position: relative;
     width: 100%;
